--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,9 @@
 </head>
 <body>
 <p>Иконки: 
-</p>
+</p>Авторство:
+<a href="https://www.flaticon.com/ru/free-icons/-" title="Рождественская елка иконки">Рождественская елка иконки от Victoruler - Flaticon</a>
+    
 </body>
 </html>
 
