--- a/Congratulations2026.html
+++ b/Congratulations2026.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
     <title>Поздравление!</title>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Заголовок страницы</title>
@@ -12,6 +13,8 @@
 <p>Для ценителей родного языка я подготовила русский кроссворд с тематическими словами: «Дед Мороз», «Снегурочка», «ёлка», «хлопушка» и другие атрибуты новогоднего настроения. А тем, кто хочет совместить праздничное настроение с практикой иностранного языка, подойдёт английский кроссворд, где вы встретите слова вроде snowflake, fireworks, gift и celebration.</p>
 
 <p>Разгадывайте, угадывайте, улыбайтесь — и пусть Новый год принесёт вам радость, вдохновение и успехи в учёбе и работе!</p>
+    <a href="russian-crossword.html">Разгадать русский кроссворд</a>
+    <a href="english-crossword.html">Solve the English crossword</a>
 
 </body>
 </html>
