--- a/Congratulations2026.html
+++ b/Congratulations2026.html
@@ -13,8 +13,8 @@
 <p>Для ценителей родного языка я подготовила русский кроссворд с тематическими словами: «Дед Мороз», «Снегурочка», «ёлка», «хлопушка» и другие атрибуты новогоднего настроения. А тем, кто хочет совместить праздничное настроение с практикой иностранного языка, подойдёт английский кроссворд, где вы встретите слова вроде snowflake, fireworks, gift и celebration.</p>
 
 <p>Разгадывайте, угадывайте, улыбайтесь — и пусть Новый год принесёт вам радость, вдохновение и успехи в учёбе и работе!</p>
-    <a href="">Разгадать русский кроссворд</a>
-    <a href="english-crossword.html">Solve the English crossword</a>
+    <a href="krossvordRU.html">Разгадать русский кроссворд</a>
+    <a href="krossvordEN.html">Solve the English crossword</a>
 
 </body>
 </html>
