--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 <body>
 <h2> 15.12.2025 , 2025</h2>
 
-Поздравление с Наступающим 2026 годом читайте <a href="Колядки .odt"> здесь.</a>
+Поздравление с Наступающим 2026 годом читайте <a href="Kolyadka.odt"> здесь.</a>
 <video controls width="640" height="360">
-  <source src="" type="video/mp4">
+  <source src="" type="kolyadka.mp4">
   Ваш браузер не поддерживает видео.
-</video>019b170a-f542-78f2-ada9-d69d48b39f7f(3).mp4
+</video>
 
     
    <h2> 03.12.2025 , 2025</h2>
