--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <h2> 15.12.2025 , 2025</h2>
 
-Поздравление с Наступающим 2026 годом читайте <a href="Kolyadka.odt"> здесь.</a>
+<p>Поздравление с Наступающим 2026 годом читайте <a href="Kolyadka.odt"> здесь.</a></p>
 <video controls width="640" height="360">
   <source src="" type="kolyadka.mp4">
   Ваш браузер не поддерживает видео.
