--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<h2> 12.01.2026 , 2026</h2>
+
+
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -6,6 +7,10 @@
     <link type=“text/css” rel=“stylesheet” href=“style.css” />
 </head>
 <body>
+
+<h2> 12.01.2026 , 2026</h2>
+    <h2> домен - ragel05 github io . </h2>
+    
 <h2> 15.12.2025 , 2025</h2>
 
 <p>Поздравление с Наступающим 2026 годом читайте <a href="Kolyadka.odt"> здесь.</a></p>
