--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <h2> 12.01.2026 , 2026</h2>
     <h2> домен - ragel05 github io . </h2>
+    <p><a href="mailto:ragimradzhabov2003@gmail.com">Напишите мне</a></p>
     
 <h2> 15.12.2025 , 2025</h2>
 
