--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
     <link type=“text/css” rel=“stylesheet” href=“style.css” />
 </head>
 <body>
+<h2> 17.01.2026 , 2026</h2>
+<р>решение шифров Цезаря </р> 
+<p>1. Определение ключа </р> 
+<р> АПЕЛЬСИН - САЦЬНВШО - 18 </р>
+<р> АБРИКОС - ЫЬЛГЕЙМ - 28 </р>
+<р> 2. Расшифровка </р> 
+<р> ФХНЗКЧ - привет - 5 </р>
+<р> ЦЩЕБФ - Весна - 20 </р>
 
+
+    
 <h2> 12.01.2026 , 2026</h2>
     <h2> домен - ragel05 github io . </h2>
     <p><a href="mailto:ragimradzhabov2003@gmail.com">Напишите мне</a></p>
