--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 <h2> 17.01.2026 , 2026</h2>
-<р>решение шифров Цезаря </р> 
-<p>1. Определение ключа </р> 
+<р>Решение шифров Цезаря </р> 
+<p> 1. Определение ключа </р> 
 <р> АПЕЛЬСИН - САЦЬНВШО - 18 </р>
 <р> АБРИКОС - ЫЬЛГЕЙМ - 28 </р>
 <р> 2. Расшифровка </р> 
