--- a/index.html
+++ b/index.html
@@ -3,6 +3,19 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+     <meta charset="UTF-8" />
+  <title> Мой блог </title>
+  <style>
+    body {
+      background-color: yellow;
+      color: black;            
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 20px;
+    }
+  </style>
+</head>
+    
     <title>Мой блог</title>
     <link type=“text/css” rel=“stylesheet” href=“style.css” />
 </head>
