--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </div>
 
   <div class="note">
-    ⚠️ В этом примере <code>e = d</code> — это допустимо для обучения, но <strong>небезопасно</strong> в реальных системах!
+     В этом примере <code>e = d</code> — это допустимо для обучения, но <strong>небезопасно</strong> в реальных системах!
   </div>
 
   <h2>2. Шифрование</h2>
@@ -50,12 +50,12 @@
 
   <h2>3. Расшифровка</h2>
   <p>Расшифровываем: <code>M = C<sup>d</sup> mod n = 8<sup>3</sup> mod 15 = 512 mod 15 = 2</code></p>
-  <p>→ <strong>Исходное сообщение восстановлено!</strong> ✅</p>
+  <p>→ <strong>Исходное сообщение восстановлено!</strong> </p>
 
   <button onclick="decrypt()">Проверить расшифровку (8³ mod 15)</button>
   <div id="result"></div>
 
-  <h2>💡 А в реальности?</h2>
+  <h2> А как в реальности?</h2>
     <p>
 Число <code>n</code> состоит из <strong>600+ десятичных цифр</strong> (2048+ бит).<br>
   Такие маленькие числа (<code>p=3, q=5</code>) используются <strong>только для обучения</strong>.</p>
