--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 <body>
 <h2> 21.01.2026 , 2026</h2>
 <h2>1. Генерация ключей</h2>
+
+<p class="zz><b>ключи (на основе p=5, q=11):</b></p>
   <p>Выбираем простые числа:</p>
   <ul>
     <li><code>p = 3</code></li>
