--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
     <link type=“text/css” rel=“stylesheet” href=“style.css” />
 </head>
 <body>
+<h2> 14.02.2026 , 2026</h2>
+Топ-3 предсказаний:
+running shoe: 99.45%
+shoe store: 0.27%
+clogs: 0.15%
+
+
+
+ 
+ 
 <h2> 21.01.2026 , 2026</h2>
 <h2>1. Генерация ключей</h2>
 
